fixed the input size son it all aligns and asjudsted create button once more

--- a/src/components/LoginForm/style.css
+++ b/src/components/LoginForm/style.css
@@ -55,7 +55,7 @@ input {
   border: none;
   background-color: transparent;
   outline: none;
-  margin-top: 30px;
+  margin-top: 15px;
   margin-left: 20px;
   font-family: "Grape Nuts", cursive;
   font-size: 18px;
