--- a/src/components/RegForm/style.css
+++ b/src/components/RegForm/style.css
@@ -2,7 +2,7 @@
   color: black;
   font-size: 24px;
   position: absolute;
-  margin-top: -65px;
+  margin-top: -25px;
   margin-left: -15px;
 }
 
@@ -24,7 +24,7 @@
   height: 300px;
 }
 
-.reg-username {
+/* .reg-username {
   margin-bottom: -10px;
 }
 
@@ -34,7 +34,7 @@
 
 .reg-password {
   margin-bottom: -10px;
-}
+} */
 
 #reg_btn_doodle {
   margin-top: 80px;
@@ -54,7 +54,7 @@
 
 #reg_btn_doodle svg {
   position: absolute;
-  top: -70px;
+  top: -35px;
   left: -30px;
   width: 100px;
   height: 50px;
